--- a/rexpo/package.json
+++ b/rexpo/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.14",
+    "expo": "~52.0.18",
+    "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "^0.76.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
