--- a/rexpo/package.json
+++ b/rexpo/package.json
@@ -15,7 +15,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
-    "expo-video": "^2.0.3",
+    "expo-video": "~2.0.3",
     "react": "18.3.1",
     "react-native": "^0.76.5",
     "react-native-animatable": "^1.4.0",
