--- a/rexpo/app.json
+++ b/rexpo/app.json
@@ -32,7 +32,8 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      "expo-video"
+      "expo-video",
+      "react-native-video"
     ],
     "newArchEnabled": true
   }
