--- a/rexpo/app.json
+++ b/rexpo/app.json
@@ -33,7 +33,8 @@
       "expo-router",
       "expo-font",
       "expo-video",
-      "react-native-video"
+      "react-native-video",
+      "expo-av"
     ],
     "newArchEnabled": true
   }
