--- a/rexpo/package.json
+++ b/rexpo/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "expo": "~52.0.20",
-    "expo-av": "^15.0.1",
+    "expo-av": "~15.0.1",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
